# erudite

./: Cargo.toml  LICENSE  README.md  README.tpl  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: codecov.yml
.github/workflows/: check.yml  docs.yml  test.yml
erudite/: all.html  enum.Bytes.html  enum.FileContent.html  enum.RunOutput.html  enum.TestFailReason.html  enum.TestOutput.html  index.html  sidebar-items.js  struct.BorrowedFileConfig.html  struct.BorrowedFileContent.html  struct.CommandConfig.html  struct.FileConfig.html  struct.MemorySize.html  struct.Output.html  struct.Rules.html  struct.Runner.html  struct.SimpleOutput.html  struct.TestCase.html  struct.TestContext.html  struct.TestContextBuilder.html
erudite/cases/: enum.ExpectedOutput.html  index.html  sidebar-items.js  struct.TestCase.html
erudite/context/: struct.TestContext.html
erudite/context/builder/: struct.TestContextBuilder.html
erudite/error/: enum.CompileError.html  enum.SpawnTestError.html  index.html  sidebar-items.js  struct.CreateFilesError.html
erudite/runner/: enum.CompileResultState.html  enum.TestResultState.html  index.html  sidebar-items.js  struct.CompileResult.html  struct.CompiledTestRunner.html  struct.TestHandle.html  struct.TestResult.html  struct.TestRunner.html
examples/: simple.rs  solution.rs
search.desc/erudite/: erudite-desc-0-.js
search.index/: 05978480ec0b.js  0719ccebf947.js  07d9a0bf7ee0.js  0b005943e6b0.js  0f0de96ee8f3.js  1513d053da5c.js  21dc0f403ed5.js  33886e9655e9.js  3e249f7a62ed.js  3f6768ed104c.js  400a5f03944b.js  40fa7261391c.js  4276064b626c.js  51585497e67f.js  56b6551fe179.js  594f69881cbc.js  60d2d6816b42.js  6558cd3a4e55.js  7e0c6805b292.js  root.js
search.index/crateNames/: 33c001fa8fb6.js
search.index/desc/: 5089b0695dbe.js
search.index/entry/: a562bf1a55c4.js
search.index/function/: 3395887f5a35.js
search.index/generic_inverted_index/: 350563a3f19a.js
search.index/name/: a69b586eef9a.js
search.index/normalizedName/: 0a65f3c08510.js
search.index/path/: dbafbaf8bd75.js
search.index/type/: b58e0099a9e0.js
src/: cases.rs  context.rs  error.rs  lib.rs  runner.rs
src/context/: builder.rs  mod.rs
src/erudite/: cases.rs.html  error.rs.html  lib.rs.html  runner.rs.html
src/erudite/context/: builder.rs.html  mod.rs.html
tests/: Solution.java  java.rs  malicious.js  malicious.rs  reverse.rs  validation.rs
tests/code/: commands.rs  reverse-runner.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  (+2 more)
(+3 files in other folders)
